@@ -119,8 +119,15 @@ void FbRun::run(const std::string &command) {
 
     // fork and execute program
     if (!fork()) {
+
+        char *shell = getenv("SHELL");
+        if (!shell)
+            shell = "/bin/sh";
+
+        std::string exec_cmd = "exec " + command;
+
         setsid();
-        execl("/bin/sh", "/bin/sh", "-c", command.c_str(), static_cast<void*>(NULL));
+        execl(shell, shell, "-c", exec_cmd.c_str(), static_cast<void*>(NULL));
         exit(0); //exit child
     }
 
