@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
+*07/06/06:
+   * Fix to avoid rogue instances of /bin/sh after forking away programs (Mathias)
+     util/fbrun/FbRun.cc src/FbCommands.cc
 *07/06/04:
    * Fix fluxbox.1.in, and asciidoc, menu command is "wallpapers" not
      "wallpaper". asciidoc manpages are stale.
